--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,7 +73,7 @@ h1 {
   font-size: 1.9em;
   color: black;
   font-family: 'Playfair Display', serif;
-  padding: 10px 30px 50px 40px; }
+  padding: 10px 30px 30px 40px; }
 
 h2 {
   font-size: 1.9em;
@@ -126,7 +126,7 @@ header {
   z-index: 100;
   border-bottom-right-radius: 70px;
   border-bottom-left-radius: 70px;
-  box-shadow: 1px 30px 30px -7px rgba(95, 93, 93, 0.7); }
+  box-shadow: 1px 30px 30px -7px rgba(95, 93, 93, 0.322); }
   header a > img {
     height: 160px;
     width: auto; }
@@ -211,14 +211,17 @@ main {
         align-self: center;
         justify-content: center;
         box-shadow: 1px 30px 40px -7px rgba(95, 83, 42, 0.39);
-        transition: all 1.4s;
-        background-color: #a9b8a6; }
+        transition: background-size 0.4s;
+        background-image: url("https://previews.123rf.com/images/feverpitched/feverpitched0808/feverpitched080800141/3475197-rouge-et-blanc-quadrill%C3%A9-couverture-pique-nique-d%C3%A9tail.jpg");
+        background-size: 200%; }
         main #call-to-action figure > div a:hover {
+          font-size: 50px;
           color: white;
           background-color: #999581;
+          background-size: 300%;
           box-shadow: 8px 10px 19px -7px rgba(0, 0, 0, 0.4); }
   main #engagements {
-    box-shadow: 0px -50px 70px -10px rgba(95, 93, 93, 0.5);
+    box-shadow: 0px -50px 70px -10px rgba(95, 93, 93, 0.274);
     display: flex;
     margin-top: -150px;
     padding: 20px;
@@ -230,6 +233,8 @@ main {
     background-color: white;
     border-top-left-radius: 60px;
     border-top-right-radius: 60px; }
+    main #engagements h2 {
+      padding-left: 30px; }
     main #engagements article {
       display: none;
       flex-direction: column;
