--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -61,17 +61,20 @@ main {
                 justify-content: center;
                 //background-image: linear-gradient(rgba(250, 250, 250, 0.473), rgb(13, 27, 219));
                 box-shadow: 1px 30px 40px -7px rgba(95, 83, 42, 0.39);
-                transition: all 1.4s;
-                background-color: rgb(169, 184, 166);
+                transition: background-size 0.4s;
+                background-image: url("https://previews.123rf.com/images/feverpitched/feverpitched0808/feverpitched080800141/3475197-rouge-et-blanc-quadrill%C3%A9-couverture-pique-nique-d%C3%A9tail.jpg");
                 //background-image: url("https://previews.123rf.com/images/feverpitched/feverpitched0808/feverpitched080800141/3475197-rouge-et-blanc-quadrill%C3%A9-couverture-pique-nique-d%C3%A9tail.jpg");
                 //background-size: 60%;
                 //border-top: solid 2px rgb(73, 73, 218);
                 //border-left: solid 2px rgb(63, 63, 243);
                 //border-bottom: solid 2px red;
-               // border-right: solid 2px red;
+               // border-right: solid 2px red; 
+               background-size: 200%;
                 &:hover {
+                    font-size: 50px;
                     color: white;
                     background-color: rgb(153, 149, 129);
+                    background-size: 300%;
                     
                     box-shadow: 8px 10px 19px -7px rgba(0,0,0,0.4);
                     //background-image: linear-gradient(rgb(255, 0, 0), rgba(250, 250, 250, 0.473));
@@ -80,7 +83,7 @@ main {
         }
     }
     #engagements {
-        box-shadow: 0px -50px 70px -10px rgba(95, 93, 93, 0.5);
+        box-shadow: 0px -50px 70px -10px rgba(95, 93, 93, 0.274);
         display: flex;
         margin-top: -150px;
         padding: 20px ;
@@ -92,6 +95,9 @@ main {
         background-color: white;
         border-top-left-radius: 60px;
         border-top-right-radius: 60px;
+        h2 {
+            padding-left: 30px;
+        }
         article {
             display: none;
             //display: flex;
@@ -195,7 +201,7 @@ main {
             height: 50px;
             justify-content: center;
             align-items: center;
-            text-align: center;
+            text-align: center ;
         }
     }
 }
