--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -125,9 +125,8 @@ header {
   width: 100%;
   z-index: 100;
   border-bottom-right-radius: 70px;
-  border-bottom-left-radius: 70px;
   box-shadow: 1px 30px 30px -7px rgba(95, 93, 93, 0.322);
-  border-bottom: solid 10px rgba(180, 116, 116, 0.705); }
+  border-bottom: solid 5px rgba(113, 204, 28, 0.308); }
   header a > img {
     height: 160px;
     width: auto; }
@@ -222,23 +221,29 @@ main {
           background-size: 300%;
           box-shadow: 8px 10px 19px -7px rgba(0, 0, 0, 0.164); }
   main #engagements {
-    box-shadow: 0px -60px 70px 60px rgba(88, 82, 82, 0.384);
-    border-top: solid 10px rgba(180, 116, 116, 0.705);
+    box-shadow: 8px 10px 19px -7px rgba(0, 0, 0, 0.562);
+    border-top: solid 5px rgba(233, 124, 124, 0.473);
+    border-bottom: solid 2px rgba(95, 94, 94, 0.719);
     display: flex;
     margin-top: -170px;
     padding: 10px;
     flex-direction: column;
     justify-content: space-between;
-    row-gap: 30px;
+    row-gap: 50px;
     z-index: 4;
     padding-top: 35px;
+    padding-bottom: 30px;
     background-color: white;
     border-top-left-radius: 60px;
-    border-top-right-radius: 60px; }
+    background-image: url("/assets/img/texture-bois.png");
+    background-position: 0%; }
     main #engagements h2 {
+      font-size: 2.5em;
+      color: white;
       padding-left: 30px; }
     main #engagements article {
-      display: none;
+      background-color: white;
+      display: flex;
       flex-direction: column;
       box-shadow: 8px 10px 19px -7px rgba(0, 0, 0, 0.4);
       border-radius: 20px; }
