--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -83,24 +83,30 @@ main {
         }
     }
     #engagements {
-        box-shadow: 0px -60px 70px 60px rgba(88, 82, 82, 0.384);
-        border-top: solid 10px rgba(180, 116, 116, 0.705);
+        box-shadow: 8px 10px 19px -7px rgba(0, 0, 0, 0.562);
+        border-top: solid 5px rgba(233, 124, 124, 0.473);
+        border-bottom: solid 2px rgba(95, 94, 94, 0.719);
         display: flex;
         margin-top: -170px;
         padding: 10px ;
         flex-direction: column;
         justify-content: space-between;
-        row-gap: 30px;
+        row-gap: 50px;
         z-index: 4;
         padding-top: 35px;
+        padding-bottom: 30px;
         background-color: white;
         border-top-left-radius: 60px;
-        border-top-right-radius: 60px;
+        background-image: url("/assets/img/texture-bois.png");
+        background-position: 0%;
         h2 {
+            font-size: 2.5em;
+            color: white;
             padding-left: 30px;
         }
         article {
-            display: none;
+            background-color: white;
+            display: flex;
             //display: flex;
             flex-direction: column;
             box-shadow: 8px 10px 19px -7px rgba(0,0,0,0.4);
