--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,7 +73,7 @@ h1 {
   font-size: 1.9em;
   color: black;
   font-family: 'Playfair Display', serif;
-  padding: 10px 30px 30px 40px; }
+  padding: 10px 30px 50px 20px; }
 
 h2 {
   font-size: 1.4em;
@@ -124,9 +124,9 @@ header {
   padding: 40px 0 10px 0;
   width: 100%;
   z-index: 100;
-  border-bottom-right-radius: 70px;
+  border-bottom-right-radius: 100px;
   box-shadow: 1px 30px 30px -7px rgba(95, 93, 93, 0.322);
-  border-bottom: solid 5px rgba(0, 0, 0, 0.267); }
+  border-bottom: solid 8px rgba(7, 22, 238, 0.733); }
   header a > img {
     height: 160px;
     width: auto; }
@@ -165,8 +165,7 @@ main {
   padding-top: 120px;
   display: flex;
   flex-direction: column;
-  background-color: white;
-  border-top-left-radius: 30px; }
+  background-color: white; }
   main #call-to-action {
     position: relative;
     flex-basis: 100%;
@@ -180,6 +179,7 @@ main {
       justify-content: center;
       align-items: center; }
     main #call-to-action figure > video {
+      opacity: 1;
       margin-top: 100px;
       width: 100%;
       max-width: 100%;
@@ -206,7 +206,7 @@ main {
         display: flex;
         font-size: 40px;
         position: relative;
-        top: 205px;
+        top: 230px;
         color: white;
         border: 5px solid rgba(255, 255, 255, 0.863);
         font-weight: 700;
@@ -227,10 +227,10 @@ main {
           box-shadow: 8px 10px 19px -7px rgba(0, 0, 0, 0.164); }
   main #engagements {
     box-shadow: 8px 10px 19px -7px rgba(0, 0, 0, 0.562);
-    border-top: solid 5px rgba(8, 8, 8, 0.377);
+    border-top: solid 8px rgba(167, 6, 6, 0.795);
     border-bottom: solid 2px rgba(95, 94, 94, 0.719);
     display: flex;
-    margin-top: -170px;
+    margin-top: -120px;
     padding: 10px;
     flex-direction: column;
     justify-content: space-between;
@@ -239,14 +239,15 @@ main {
     padding-top: 35px;
     padding-bottom: 30px;
     background-color: white;
-    border-top-left-radius: 60px;
+    border-top-left-radius: 100px;
     background-image: url("https://thumbs.dreamstime.com/b/gros-plan-de-la-texture-fond-planche-du-bureau-cuisine-en-bois-%C3%A0-retrancher-vieux-meuble-d%C3%A9coupante-vue-sup%C3%A9rieure-163686531.jpg");
     background-position: 0%; }
     main #engagements h2 {
       font-size: 2.2em;
       color: rgba(48, 46, 46, 0.925);
       font-weight: 900;
-      padding-left: 30px;
+      padding-left: 40px;
+      padding-top: 10px;
       text-shadow: 4px 10px 4px rgba(15, 15, 15, 0.226); }
     main #engagements article {
       background-image: url("https://us.123rf.com/450wm/natthanim/natthanim1801/natthanim180100029/92712257-texture-d-ardoise-noire-gris-fonc%C3%A9-en-motif-naturel-avec-une-haute-r%C3%A9solution-pour-le-fond-et-le-tra.jpg?ver=6");
