--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -7,7 +7,6 @@ main {
     display: flex;
     flex-direction: column;
     background-color: white;
-    border-top-left-radius: 30px;
     #call-to-action {
         position: relative;
         flex-basis: 100%;
@@ -22,6 +21,7 @@ main {
             align-items: center;
         }
         figure > video {
+            opacity: 1;
             margin-top: 100px;
             width: 100%;
             max-width: 100%;
@@ -51,7 +51,7 @@ main {
                 display: flex;
                 font-size: 40px;
                 position: relative;
-                top: 205px;
+                top: 230px;
                 color: white;
                 border: 5px solid rgba(255, 255, 255, 0.863);
                 font-weight: 700;
@@ -85,10 +85,10 @@ main {
     }
     #engagements {
         box-shadow: 8px 10px 19px -7px rgba(0, 0, 0, 0.562);
-        border-top: solid 5px rgba(8, 8, 8, 0.377);
+        border-top: solid 8px rgba(167, 6, 6, 0.795);
         border-bottom: solid 2px rgba(95, 94, 94, 0.719);
         display: flex;
-        margin-top: -170px;
+        margin-top: -120px;
         padding: 10px ;
         flex-direction: column;
         justify-content: space-between;
@@ -97,14 +97,15 @@ main {
         padding-top: 35px;
         padding-bottom: 30px;
         background-color: white;
-        border-top-left-radius: 60px;
+        border-top-left-radius: 100px;
         background-image: url("https://thumbs.dreamstime.com/b/gros-plan-de-la-texture-fond-planche-du-bureau-cuisine-en-bois-%C3%A0-retrancher-vieux-meuble-d%C3%A9coupante-vue-sup%C3%A9rieure-163686531.jpg");
         background-position: 0%;
         h2 {
             font-size: 2.2em;
             color: rgba(48, 46, 46, 0.925);
             font-weight: 900;
-            padding-left: 30px;
+            padding-left: 40px;
+            padding-top: 10px;
             text-shadow: 4px 10px 4px rgba(15, 15, 15, 0.226);
         }
         article {
