--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -5,12 +5,12 @@ header {
     display: flex;
     flex-wrap: wrap;
     justify-content: flex-end;
-    padding: 40px 0 10px 0;
+    padding-top: 10px;
     width: 100%;
     z-index: 100;
     border-bottom-right-radius: 100px;
     box-shadow: 1px 30px 30px -7px rgba(95, 93, 93, 0.322);
-    border-bottom: solid 8px rgba(7, 22, 238, 0.733);
+    border-bottom: solid 5px rgba(7, 22, 238, 0.733);
 
     a > img {
         height: 160px;
