--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -76,14 +76,16 @@ h1 {
   font-size: 1.9em;
   color: black;
   font-family: 'Playfair Display', serif;
-  padding: 35px 30px 30px 20px; }
+  padding: 30px 30px 30px 20px; }
 
 h2 {
   font-size: 1.9em;
   font-weight: 600;
   padding-bottom: 20px;
   color: #0f0f0f;
-  font-family: 'Playfair Display', serif; }
+  font-family: 'Playfair Display', serif;
+  text-shadow: 4px 10px 4px rgba(15, 15, 15, 0.075);
+  padding-left: 4px; }
 
 h3 {
   font-size: 0.8em;
@@ -91,7 +93,7 @@ h3 {
   padding-bottom: 5px; }
 
 section {
-  padding: 50px 0; }
+  padding: 20px 0; }
 
 a {
   text-decoration: none;
@@ -124,15 +126,14 @@ header {
   display: flex;
   flex-wrap: wrap;
   justify-content: flex-end;
-  padding-top: 10px;
   width: 100%;
   z-index: 100;
   border-bottom-right-radius: 100px;
   box-shadow: 1px 30px 30px -7px rgba(95, 93, 93, 0.322);
-  border-bottom: solid 5px rgba(0, 0, 0, 0.733); }
+  border-bottom: solid 2px rgba(0, 0, 0, 0.733); }
   header a > img {
     padding-top: 20px;
-    height: 190px;
+    height: 120px;
     width: auto; }
   header #top-info {
     display: flex;
@@ -158,7 +159,7 @@ header {
       text-shadow: 10px 0px 12px #f8f4f3; }
   header #icons-bars-menu {
     position: absolute;
-    top: 85px;
+    top: 60px;
     left: 30px;
     font-size: 30px;
     opacity: 0.7; }
@@ -184,10 +185,10 @@ main {
       align-items: center; }
     main #call-to-action figure > img {
       opacity: 1;
-      margin-top: 150px;
+      margin-top: 80px;
       width: 100%;
       max-width: 100%;
-      height: 550px;
+      height: 450px;
       object-fit: cover;
       object-position: center;
       z-index: 1; }
@@ -206,16 +207,16 @@ main {
       padding: 20px;
       border: solid 0px rgba(5, 5, 5, 0.747); }
       main #call-to-action figure > div a {
-        opacity: 0.8;
+        opacity: 1;
         display: flex;
-        font-size: 40px;
+        font-size: 27px;
         position: relative;
-        top: 230px;
+        top: 130px;
         color: white;
         border: 5px solid rgba(255, 255, 255, 0.863);
         font-weight: 700;
-        height: 100px;
-        width: 100px;
+        height: 70px;
+        width: 70px;
         border-radius: 50%;
         align-items: center;
         align-self: center;
@@ -224,57 +225,44 @@ main {
         transition: background-size 0.4s;
         background-image: url("https://us.123rf.com/450wm/natthanim/natthanim1801/natthanim180100029/92712257-texture-d-ardoise-noire-gris-fonc%C3%A9-en-motif-naturel-avec-une-haute-r%C3%A9solution-pour-le-fond-et-le-tra.jpg?ver=6"); }
         main #call-to-action figure > div a:hover {
-          font-size: 50px;
+          opacity: 0.6;
+          font-size: 30px;
           color: white;
           background-color: #68665c;
           background-size: 300%;
           box-shadow: 8px 10px 19px -7px rgba(0, 0, 0, 0.164); }
   main #engagements {
-    -webkit-box-shadow: 0px 0px 58px 34px #4a4b5a;
-    -moz-box-shadow: 0px 0px 58px 34px #4a4b5a;
-    box-shadow: 0px 0px 58px 34px rgba(204, 204, 211, 0.589);
-    border-top: solid 3px black;
-    border-bottom: solid 2px rgba(95, 94, 94, 0.719);
     display: flex;
     margin-top: -145px;
-    padding: 10px;
+    padding: 20px;
     flex-direction: column;
     justify-content: space-between;
     row-gap: 20px;
     z-index: 4;
-    padding-top: 35px;
-    padding-bottom: 30px;
+    padding-top: 45px;
+    padding-bottom: 40px;
     background-color: white;
-    border-top-left-radius: 100px;
-    background-image: url("https://thumbs.dreamstime.com/b/gros-plan-de-la-texture-fond-planche-du-bureau-cuisine-en-bois-%C3%A0-retrancher-vieux-meuble-d%C3%A9coupante-vue-sup%C3%A9rieure-163686531.jpg");
     background-position: 0%; }
-    main #engagements h2 {
-      font-size: 2.2em;
-      color: rgba(48, 46, 46, 0.925);
-      font-weight: 900;
-      padding-left: 40px;
-      padding-top: 10px;
-      text-shadow: 4px 10px 4px rgba(15, 15, 15, 0.226); }
     main #engagements article {
-      background-image: url("https://us.123rf.com/450wm/natthanim/natthanim1801/natthanim180100029/92712257-texture-d-ardoise-noire-gris-fonc%C3%A9-en-motif-naturel-avec-une-haute-r%C3%A9solution-pour-le-fond-et-le-tra.jpg?ver=6");
+      background-color: #fff;
       display: flex;
       flex-direction: column;
-      box-shadow: 8px 10px 19px -7px rgba(0, 0, 0, 0.685);
+      box-shadow: 8px 10px 19px -7px rgba(0, 0, 0, 0.301);
       border-radius: 20px;
       padding: 5px; }
       main #engagements article figure {
         flex-basis: 90%; }
       main #engagements article img {
         width: 100%;
-        height: 130px;
+        height: 110px;
         border-top-right-radius: 20px;
         border-top-left-radius: 20px;
         object-fit: cover; }
       main #engagements article h3 {
-        opacity: 0.8;
-        font-size: 1.4em;
+        opacity: 0.9;
+        font-size: 1.2em;
         font-family: 'Dancing Script', cursive;
-        color: white;
+        color: black;
         padding: 15px;
         text-align: center;
         text-shadow: 10px 0px 12px #f8f4f3; }
@@ -291,36 +279,35 @@ main {
   main #products {
     background-color: rgba(235, 231, 217, 0.432);
     display: flex;
-    padding: 30px 20px;
+    padding: 20px 20px;
     flex-direction: column;
     justify-content: space-between;
-    row-gap: 30px; }
+    row-gap: 20px; }
     main #products article {
       background-color: white;
       opacity: 0.8;
-      padding: 10px;
+      padding: 5px;
       display: flex;
       flex-direction: column;
       box-shadow: 8px 10px 19px -7px rgba(0, 0, 0, 0.4);
       border-radius: 20px;
-      height: 240px;
-      background-image: url("https://us.123rf.com/450wm/natthanim/natthanim1801/natthanim180100029/92712257-texture-d-ardoise-noire-gris-fonc%C3%A9-en-motif-naturel-avec-une-haute-r%C3%A9solution-pour-le-fond-et-le-tra.jpg?ver=6");
+      height: 180px;
       background-position: bottom;
       background-size: 50%; }
       main #products article figure {
         flex-basis: 100%; }
       main #products article img {
         width: 100%;
-        height: 170px;
+        height: 130px;
         border-top-right-radius: 20px;
         border-top-left-radius: 20px;
         object-fit: cover;
         object-position: bottom; }
       main #products article h3 {
         opacity: 0.9;
-        font-size: 1.9em;
+        font-size: 1.6em;
         font-family: 'Dancing Script', cursive;
-        color: white;
+        color: black;
         padding: 15px;
         text-align: center;
         text-shadow: 10px 0px 12px #f8f4f3; }
