--- a/assets/scss/base/_base.scss
+++ b/assets/scss/base/_base.scss
@@ -15,7 +15,7 @@ h1 {
     font-size: 1.9em;
     color: black;
     font-family: 'Playfair Display', serif;
-    padding: 35px 30px 30px 20px;
+    padding: 30px 30px 30px 20px;
     
 }
 
@@ -25,6 +25,8 @@ h2 {
     padding-bottom: 20px;
     color: rgb(15, 15, 15);
     font-family: 'Playfair Display', serif;
+    text-shadow: 4px 10px 4px rgba(15, 15, 15, 0.075);
+    padding-left: 4px;
     
 }
 h3 {
@@ -34,7 +36,7 @@ h3 {
     padding-bottom: 5px;
 }
 section {
-    padding: 50px 0;
+    padding: 20px 0;
 }
 a {
     text-decoration: none;
