--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -133,8 +133,8 @@ header {
   box-shadow: 1px 30px 30px -7px rgba(95, 93, 93, 0.322);
   border-bottom: solid 2px rgba(0, 0, 0, 0.733); }
   header a > img {
-    padding-top: 20px;
-    height: 120px;
+    padding-top: 5px;
+    height: 160px;
     width: auto; }
   header #top-info {
     display: flex;
@@ -160,7 +160,7 @@ header {
       text-shadow: 10px 0px 12px #f8f4f3; }
   header #icons-bars-menu {
     position: absolute;
-    top: 60px;
+    top: 75px;
     left: 30px;
     font-size: 30px;
     opacity: 0.7; }
@@ -189,9 +189,9 @@ main {
       margin-top: 80px;
       width: 100%;
       max-width: 100%;
-      height: 450px;
+      height: 460px;
       object-fit: cover;
-      object-position: center;
+      object-position: right;
       z-index: 1; }
     main #call-to-action figure > div {
       display: flex;
