--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -25,9 +25,10 @@ main {
             margin-top: 80px;
             width: 100%;
             max-width: 100%;
-            height: 450px;
+            height: 460px;
             object-fit: cover;
-            object-position: center;
+            object-position: right;
+
                        
           
             z-index: 1;
