--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,7 +73,7 @@ h1 {
   margin-top: -70px;
   font-weight: 500;
   width: 100%;
-  font-size: 1.9em;
+  font-size: 1.4em;
   color: black;
   font-family: 'Playfair Display', serif;
   padding: 30px 30px 30px 20px; }
@@ -128,13 +128,13 @@ header {
   flex-wrap: wrap;
   justify-content: flex-end;
   width: 100%;
-  z-index: 100;
-  border-bottom-right-radius: 100px;
+  z-index: 10;
+  border-bottom-right-radius: 0px;
   box-shadow: 1px 30px 30px -7px rgba(95, 93, 93, 0.322);
   border-bottom: solid 2px rgba(0, 0, 0, 0.733); }
   header a > img {
-    padding-top: 5px;
-    height: 160px;
+    padding-top: 25px;
+    height: 140px;
     width: auto; }
   header #top-info {
     display: flex;
@@ -147,23 +147,25 @@ header {
     width: 100%;
     color: white;
     font-weight: 900;
-    box-shadow: 1px 30px 30px -7px rgba(95, 93, 93, 0.322);
+    box-shadow: 1px 30px 30px -7px rgba(95, 93, 93, 0.432);
     text-shadow: 1px 0px 8px rgba(0, 0, 0, 0.93);
-    background-image: url("https://us.123rf.com/450wm/natthanim/natthanim1801/natthanim180100029/92712257-texture-d-ardoise-noire-gris-fonc%C3%A9-en-motif-naturel-avec-une-haute-r%C3%A9solution-pour-le-fond-et-le-tra.jpg?ver=6");
+    background-color: #f8eb75;
     opacity: 0.95; }
     header #top-info p {
+      font-size: 1em;
       text-align: center;
       font-family: 'Dancing Script', cursive;
-      color: white;
+      color: black;
       padding: 15px;
       text-align: center;
       text-shadow: 10px 0px 12px #f8f4f3; }
   header #icons-bars-menu {
     position: absolute;
-    top: 75px;
+    top: 80px;
     left: 30px;
     font-size: 30px;
-    opacity: 0.7; }
+    opacity: 0.7;
+    text-shadow: 1px 0px 8px rgba(104, 100, 100, 0.514); }
   header #menu-toggle {
     display: none; }
 
@@ -186,13 +188,12 @@ main {
       align-items: center; }
     main #call-to-action figure > img {
       opacity: 1;
-      margin-top: 80px;
+      margin-top: -30px;
       width: 100%;
       max-width: 100%;
-      height: 460px;
-      object-fit: cover;
-      object-position: right;
-      z-index: 1; }
+      height: 500px;
+      object-fit: contain;
+      z-index: 2; }
     main #call-to-action figure > div {
       display: flex;
       z-index: 3;
@@ -212,7 +213,8 @@ main {
         display: flex;
         font-size: 27px;
         position: relative;
-        top: 130px;
+        top: 240px;
+        left: 60px;
         color: white;
         border: 5px solid rgba(255, 255, 255, 0.863);
         font-weight: 700;
@@ -220,8 +222,9 @@ main {
         width: 70px;
         border-radius: 50%;
         align-items: center;
-        align-self: center;
+        align-self: flex-end;
         justify-content: center;
+        z-index: 1;
         box-shadow: 1px 30px 40px -7px rgba(95, 83, 42, 0.39);
         transition: background-size 0.4s;
         background-image: url("https://us.123rf.com/450wm/natthanim/natthanim1801/natthanim180100029/92712257-texture-d-ardoise-noire-gris-fonc%C3%A9-en-motif-naturel-avec-une-haute-r%C3%A9solution-pour-le-fond-et-le-tra.jpg?ver=6"); }
@@ -234,12 +237,12 @@ main {
           box-shadow: 8px 10px 19px -7px rgba(0, 0, 0, 0.164); }
   main #engagements {
     display: flex;
-    margin-top: -145px;
+    margin-top: -85px;
     padding: 20px;
     flex-direction: column;
     justify-content: space-between;
     row-gap: 20px;
-    z-index: 4;
+    z-index: 2;
     padding-bottom: 40px;
     background-color: white;
     background-position: 0%; }
