--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -22,16 +22,14 @@ main {
         }
         figure > img {
             opacity: 1;
-            margin-top: 80px;
+            margin-top: -30px;
             width: 100%;
             max-width: 100%;
-            height: 460px;
-            object-fit: cover;
-            object-position: right;
-
+            height: 500px;
+            object-fit: contain;
                        
           
-            z-index: 1;
+            z-index: 2;
         }
         figure > div {
             display: flex;
@@ -52,7 +50,8 @@ main {
                 display: flex;
                 font-size: 27px;
                 position: relative;
-                top: 130px;
+                top: 240px;
+                left: 60px;
                 color: white;
                 border: 5px solid rgba(255, 255, 255, 0.863);
                 font-weight: 700;
@@ -60,8 +59,9 @@ main {
                 width: 70px;
                 border-radius: 50%;
                 align-items: center;
-                align-self: center;
+                align-self: flex-end;
                 justify-content: center;
+                z-index: 1;
                 //background-image: linear-gradient(rgba(250, 250, 250, 0.473), rgb(13, 27, 219));
                 box-shadow: 1px 30px 40px -7px rgba(95, 83, 42, 0.39);
                 transition: background-size 0.4s;
@@ -87,12 +87,12 @@ main {
     }
     #engagements {
         display: flex;
-        margin-top: -145px;
+        margin-top: -85px;
         padding: 20px ;
         flex-direction: column;
         justify-content: space-between;
         row-gap: 20px;
-        z-index: 4;
+        z-index: 2;
         padding-bottom: 40px;
         background-color: white;
         background-position: 0%;
