--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -6,15 +6,16 @@ header {
     flex-wrap: wrap;
     justify-content: flex-end;
     width: 100%;
-    z-index: 100;
-    border-bottom-right-radius: 100px;
+    z-index: 10;
+    border-bottom-right-radius: 0px;
     box-shadow: 1px 30px 30px -7px rgba(95, 93, 93, 0.322);
     border-bottom: solid 2px rgba(0, 0, 0, 0.733);
 
     a > img { 
-        padding-top: 5px;
-        height: 160px;
+        padding-top: 25px;
+        height: 140px;
         width: auto;
+        
     }
     #top-info {
         display: flex;
@@ -27,15 +28,15 @@ header {
         width: 100%;
         color: white;
         font-weight: 900;
-        box-shadow: 1px 30px 30px -7px rgba(95, 93, 93, 0.322);
+        box-shadow: 1px 30px 30px -7px rgba(95, 93, 93, 0.432);
         text-shadow: 1px 0px 8px rgba(0,0,0,0.93);
-        background-image: url("https://us.123rf.com/450wm/natthanim/natthanim1801/natthanim180100029/92712257-texture-d-ardoise-noire-gris-fonc%C3%A9-en-motif-naturel-avec-une-haute-r%C3%A9solution-pour-le-fond-et-le-tra.jpg?ver=6"); 
+        background-color:rgb(248, 235, 117); 
         
         opacity: 0.95;
-        p {
+        p { font-size: 1em;
             text-align: center;
             font-family: 'Dancing Script', cursive;
-            color: white;
+            color: black;
             padding: 15px;
             text-align: center;
             text-shadow: 10px 0px 12px rgb(248, 244, 243);
@@ -43,10 +44,11 @@ header {
     }
     #icons-bars-menu {
         position: absolute;
-        top: 75px;
-        left: 30px;
+        top: 80px;
+        left: 30px; 
         font-size: 30px;
         opacity: 0.7;
+        text-shadow: 1px 0px 8px rgba(104, 100, 100, 0.514);
     }
     #menu-toggle {
         display: none;
