--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,6 +68,9 @@ table {
 .active {
   display: flex; }
 
+.huile-bg {
+  background-image: url("../../img/huile-olive.png"); }
+
 /* colors */
 body {
   font-family: 'Roboto', sans-serif;
@@ -254,12 +257,12 @@ main {
       padding: 0;
       justify-content: center;
       align-items: center; }
-    main #call-to-action figure > img {
+    main #call-to-action figure > iframe {
       opacity: 1;
       margin-top: 70px;
       width: 100%;
       max-width: 100%;
-      height: 320px;
+      height: 380px;
       object-fit: cover;
       z-index: 2; }
     main #call-to-action figure > div {
@@ -281,7 +284,7 @@ main {
         display: flex;
         font-size: 27px;
         position: relative;
-        top: 205px;
+        top: 265px;
         color: #e67e1d;
         border: 5px solid rgba(255, 255, 255, 0.863);
         font-weight: 700;
@@ -545,6 +548,13 @@ main {
     left: 220px;
     top: 120px;
     cursor: pointer; }
+  main {
+    padding-top: 300px; }
+    main #call-to-action figure div a {
+      top: 465px; }
+    main #call-to-action figure > iframe {
+      height: 900px;
+      margin-top: -450px; }
   main #engagements article h3 {
     font-size: 0.9em; }
   main #engagements article img {
@@ -570,3 +580,7 @@ main {
         font-size: 1.3em; }
   footer {
     padding: 40px; } }
+
+@media screen and (min-width: 1300px) {
+  main #call-to-action figure > iframe {
+    height: 1100px; } }
